@@ -169,8 +169,9 @@ Miscellaneous
 
 - Added unit tests for time integrators.
 
-- Added a Gitlab pipeline in order to automate PR testing on LC systems. This
-  is part of the new review policy.
+- Added a Gitlab pipeline in order to automate PR testing on Linux clusters and
+  supercomputing systems at Lawrence Livermore National Lab (LLNL). This can be
+  triggered only by LLNL developers, see the updated CONTRIBUTING.md.
 
 Version 4.0, released on May 24, 2019
 =====================================
